@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada

}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class RegimentoAplicavel {
  -String designacao
  -String descRegras
  -String identificador
}

class Categoria {
  -String id
  -String descricao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
}

class CaraterCT {
  -Boolean obrigatoria
}

class Tarefa {
  -String referencia
  -String designacao
  -String descInformal
  -String descTecnica
  -Integer duracaoEst
  -Double custoEst
}

class Anuncio {
  -Periodo publicitacao
  -Periodo candidatura
  -Periodo seriacao
}

class Seriacao {
  -Date dataRealizacao
}

class Candidatura {
  -Date dataCandidatura
  -Double valorPretendido
  -Integer numDias
  -String txtApresentacao
  -String txtMotivacao
}

class Freelancer {
  -String nome
  -String email
  -String telefone
}

class Administrativo {

}

class Utilizador {
  -String nome
  -String email
  -String password
}

class HabilitacaoAcademica{
  -String grau
  -String desCur
  -String inst
  -Double media
}

class GrauProficiencia{
  -String grau
  -String designacao
}

class Reconhecimento{
  -Date date
  -CompetenciaTecnica compTec
}

class Classificacao {
  -Integer posicao
}


Plataforma "1" -- "*" AreaAtividade : possui >
Plataforma "1" -- "*" CompetenciaTecnica : possui >
Plataforma "1" -- "*" Organizacao : tem registadas >
Plataforma "1" -- "*" Freelancer : tem/usa  >
Plataforma "1" -- "*" Administrativo : tem  >
Plataforma "1" -- "*" Categoria : possui >

Organizacao "1" -- "1.." Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Organizacao "1" -- "1" EnderecoPostal: localizada em >
Organizacao "1" -- "*" Tarefa: possui >

CompetenciaTecnica "*" -- "1" AreaAtividade : referente a >
CompetenciaTecnica "1" -- "1..*" GrauProficiencia: contém >

Categoria "1" -- "1" AreaAtividade: enquadra-se em >
Categoria "1" -- "*" CompetenciaTecnica: requer >
(Categoria, CompetenciaTecnica) .. CaraterCT

Tarefa "1" -- "1" Categoria: enquadra-se em >
Tarefa "*" -- "1" Colaborador: especificada por >
Tarefa "1" -- "0..1" Anuncio: gera >

Freelancer "0..1" -- "1" Utilizador: atua como >
Freelancer "1" -- "1" EnderecoPostal: contém >
Freelancer "1" -- "1..*" HabilitacaoAcademica: contém >
Freelancer "1" -- "1" Reconhecimento: contém >
Freelancer "1" -- "1" Candidatura: contém >

Reconhecimento"1" -- "1..*" CompetenciaTecnica: contém >

Anuncio "1" -- "0..1" Seriacao: espoleta >
Anuncio "*" -- "1" Colaborador: publicado por >
Anuncio "1" -- "0..*" Candidatura: recebe >

Seriacao "1" -- "*" Colaborador: realizada por >
Seriacao "1" -- "1" RegimentoAplicavel: aplica >
Seriacao "1" -- "*" Classificacao: gera >

Classificacao "0..1" -- "1" Candidatura: referente a >

Administrativo "0..1" -- "1" Utilizador: atua como >
Colaborador "0..1" -- "1" Utilizador: atua como >
@enduml